UIKit/style.css
.UIBaseContainer {
    overflow: hidden;
    position: relative;
}
.UIKitPanel {
    position: absolute;
    background-color: lightgrey;
    border: 2px solid grey;
    border-radius: 7px;
    max-width: 300px;
    min-width: 100px;
}
.UIKitTitle {
    text-align: center;
    margin: 10px 0px;
    font-size: 20px;
    padding: 10px;
    box-sizing: border-box;
}
.UIKitBtnCtr {
    display: flex;
    justify-content: center;
}
.UIKitBtnCtr button {
    flex: auto;
}
.UIKitBtnPanel {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    /* width: 150px; */
}
.UIKitBtnPanel .column {
    flex: 1;
}
.UIKitBtnPanel .column button {
    /* width: 75px; */
    height: 55px;
    padding: 0;
}
.UIKitBtnPanel .under {
    flex: 1;
}
.UIKitBtnPanel .under button {
    width: 100%;
    height: 55px;
    padding: 0;
}
.UIKitInput {
    width: 100%;
    /* max-width: 200px; */
}
.UIKitTable .column {
    text-align: center;
    padding: 5px;
}
.UIKitDataRow{
    background-color: white;
    border: 1px solid grey;
    width: auto !important;
}
.UIKitIconRow {
    background-color: grey;
}
.UIKitIconRow {
    color: white;
}
.close {
    cursor: pointer;
    position: absolute;
    right: 0;
}
.icon-med {
    font-size: 30px !important;
}
.row {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;
    justify-content: center;
}
.column {
    display: flex;
    flex-direction: column;
    flex-basis: 100%;
    flex: 1;
}
.grey {
    color: grey;
}
.col-centre {
    justify-content: center;
}
.align-centre {
    align-items: center;
}
.pointer {
    cursor: pointer;
}
.UIKitInventoryBox {
    background-color: white;
    border: 1px solid grey;
    width: auto !important;
    padding: 10px !important;
    position: relative;
}
.disabled {
    background-color: grey;
}
.UIKitInventoryItemCounter {
    position: absolute;
    bottom: 0px;
    right: 0px;
    margin: 0px;
}
.material-icons::before {
    opacity: 0;
}
.UIKitInventoryBin {
    background-color: red;
    height: 45px;
}
.white {
    color: white;
}
.UIKitKey {
    font-style: italic;
}
.UIKitVal {
    font-weight: bold;
}
.UIAlert {
    position: absolute;
    top:50%;
    left: 0;
    right: 0;
    text-align: center;
    color: white;
    font-size: 100px;
    animation: fadeIn ease 2s;
    user-select: none;
}
@keyframes fadeIn {
    0% {opacity: 0;}
    100% {opacity: 1;}
}
@keyframes fadeOut {
    0% {opacity: 1;}
    100% {opacity: 0;}
}

